# CorebelEngine

./: .gitignore  CMakeLists.txt  CMakeListst.txt  README.md
CorebelEngine_1.0/Source/: CMakeLists.txt
CorebelEngine_1.0/Source/Core/: Engine.cpp  Engine.h
get/: index.html  script.js  style.css
libs/: setup_libraries.bash
src/: main.cpp
src/Core/: Application.cpp  Application.h
src/project_manager/: ProjectManager.cpp
